:skull: fix site-tagline spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2834,6 +2834,12 @@ a.btn {
   margin: 0 auto;
 }
 
+@media (min-width: 576px) {
+  .site-tagline {
+    max-width: 350px;
+  }
+}
+
 .form-newmail {
   border: 3px solid #5BC0DE;
   border-radius: 15px;
